[tool.poetry]
name = "test-workshop"
version = "0.1.0"
description = "A small workshop on advanced testing with pytest"
authors = ["Luis Herrmann <luismherrmann@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "test_workshop"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest-lazy-fixture = "^0.6.3"
pytest = "6.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
